syntax = "proto3";

package proto;

option go_package = "tigerbeetle_grpc/health/proto";
option java_multiple_files = true;
option java_package = "nl.last.li.tigerbeetle_grpc.proto";
option java_outer_classname = "TigerBeetleProto";

service TigerBeetle {
  rpc GetID (GetIDRequest) returns (GetIDReply) {}
  rpc CreateAccounts(CreateAccountsRequest) returns (CreateAccountsReply) {}
  rpc CreateTransfers(CreateTransfersRequest) returns (CreateTransfersReply) {}
  rpc LookupAccounts(LookupAccountsRequest) returns (LookupAccountsReply) {}
  rpc LookupTransfers(LookupTransfersRequest) returns (LookupTransfersReply) {}
  rpc GetAccountTransfers(GetAccountTransfersRequest) returns (GetAccountTransfersReply) {}
  rpc GetAccountBalances(GetAccountBalancesRequest) returns (GetAccountBalancesReply) {}
}



message GetIDRequest { 
}
message GetIDReply {
  string id = 1;
}

message CreateAccountsRequest {
  repeated Account accounts = 1;
}
message CreateAccountsReply {
  repeated string results = 1;
}
message CreateTransfersRequest {
  repeated Transfer transfers = 1;

}
message CreateTransfersReply {
  repeated string results = 1;
}
message LookupAccountsRequest {
  repeated string account_ids = 1;
}
message LookupAccountsReply {
  repeated Account accounts = 1;
}
message LookupTransfersRequest {
  repeated string transfer_ids = 1;
}
message LookupTransfersReply {
  repeated Transfer transfers = 1;
}
message GetAccountTransfersRequest {
  AccountFilter filter = 1;
}
message GetAccountTransfersReply {
  repeated Transfer transfers = 1;
}
message GetAccountBalancesRequest {
  AccountFilter filter = 1;
}
message GetAccountBalancesReply {
  repeated AccountBalance account_balances = 1;
}


// Types
// ----------------------------------------------------------------
message Account {
  string id = 1;                    // uint128 as hex string
  string debits_pending = 2;        // uint128 as hex string
  string debits_posted = 3;         // uint128 as hex string
  string credits_pending = 4;       // uint128 as hex string
  string credits_posted = 5;        // uint128 as hex string
  string user_data128 = 6;          // uint128 as hex string
  int64 user_data64 = 7;
  int32 user_data32 = 8;
  int64 ledger = 9;
  int32 code = 10;
  AccountFlags flags = 11;
  string timestamp = 12;
}

message AccountFlags {
  optional bool linked                         = 1;
  optional bool debits_must_not_exceed_credits = 2;
  optional bool credits_must_not_exceed_debits = 3;
  optional bool history                        = 4;
}

message Transfer {
  string id = 1;                    // uint128 as hex string
  string debit_account_id = 2;      // uint128 as hex string
  string credit_account_id = 3;     // uint128 as hex string
  string amount = 4;                // uint128 as hex string
  optional string pending_id = 5;    // uint128 as hex string
  string user_data128 = 6;          // uint128 as hex string
  int64 user_data64 = 7;
  int32 user_data32 = 8;
  int64 ledger = 9;
  int32 code = 10;
  TransferFlags transfer_flags = 11;
  optional string timestamp = 13;
}

message TransferFlags {
  optional bool linked = 1;
  optional bool pending = 2;
  optional bool post_pending_transfer = 3;
  optional bool void_pending_transfer = 4;
  optional bool balancing_debit = 5;
  optional bool balancing_credit = 6;
}

message AccountFilter {
  string account_id = 1;
  optional string timestamp_min = 2;
  optional string timestamp_max = 3;
  int32 limit = 4;
  optional AccountFilterFlags flags      = 5;
}

message AccountFilterFlags {
  optional bool debits = 1;                     
  optional bool credits = 2; 
  optional bool reserved = 3; 
}

message AccountBalance {
  string debits_pending = 1;        // uint128 as hex string
  string debits_posted = 2;         // uint128 as hex string
  string credits_pending = 3;       // uint128 as hex string
  string credits_posted = 4;        // uint128 as hex string
  string timestamp = 5;
}